# conan-cmake-multiplatform

./: .gitignore  README.md  environment
hello-world/: CMakeLists.txt  build-android-new.sh  build-android-old-virtualenv.sh  build-android-old.sh  build-linux-new.sh  build-linux-old.sh  conanfile.py  main.cpp
hello-world-2/: build-android-new.sh  build-android-old.sh  build-linux-new.sh  build-linux-old.sh
hello-world-2/project/: CMakeLists.txt  conanfile.py
hello-world/profiles/: android_host_profile  linux_build_profile
hello-world/project/: CMakeLists.txt  conanfile.py
hello-world/project/src/: main.cpp
